--- a/Homework-12/index.html
+++ b/Homework-12/index.html
@@ -10,8 +10,13 @@
 
 <div class="wrapper">
 <form name="myform">
-    <input class="display" type="text" name="display">
+
     <table>
+        <tr>
+            <td colspan="5">
+                <input class="display" type="text" name="display">
+            </td>
+        </tr>
         <tr>
             <td>
                 <input type="button" name="btntan" value="tan" onclick="fntan()">
